# elementos-geometricos

./: CMakeLists.txt  README.md  main.cpp
include/: elem_geometricos.h
src/: CMakeLists.txt  FloatComparison.h  Poligono.h  Punto.h  Segmento.h  Vector.h
test/: CMakeLists.txt  testpoligono.cpp  testpunto.cpp  testsegmento.cpp  testvector.cpp
